Basic forms can be created. No input validation is made at all.

--- a/FormApp/FormApp/FormApp.csproj
+++ b/FormApp/FormApp/FormApp.csproj
@@ -9,7 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\FormsGenerator\FormsGenerator.csproj" />
+    <ProjectReference Include="..\..\FormsGenerator\FormsGenerator.csproj" />
   </ItemGroup>
 
   <ItemGroup>
