Insane refractoring to ease extensibility.

--- a/FormsGenerator/FormsGenerator.csproj
+++ b/FormsGenerator/FormsGenerator.csproj
@@ -4,9 +4,10 @@
     <TargetFramework>netstandard2.0</TargetFramework>
     <Authors>Eduard Campo, Dani Bautista</Authors>
     <Company />
-    <Description>Generates a custom ContentPage as a form that asks for all the information your custom model contains.</Description>
-    <RepositoryUrl>https://github.com/Danielbahe/FormGenerator.Xamarin</RepositoryUrl>
-    <PackageProjectUrl>https://github.com/Danielbahe/FormGenerator.Xamarin</PackageProjectUrl>
+    <Description>Generates a form ContentPage that asks the users for all the information your custom model contains.</Description>
+    <RepositoryUrl>https://github.com/EduardCampo/FormGenerator</RepositoryUrl>
+    <PackageProjectUrl>https://github.com/EduardCampo/FormGenerator</PackageProjectUrl>
+    <Version>1.0.1</Version>
   </PropertyGroup>
 
   <ItemGroup>
